2006-02-21  Tor Lillqvist  <tml@novell.com>

	* main.c (main): On Win32, finally call link_shutdown() (from
	ORBit2/linc2), otherwise if we have used any other component than
	mail, we will hang with the link_io_thread still running (blocked
	in g_poll()). Sigh, the linc2 code is a mystery. Why this is
	necessary I have no idea.

	* main.c (main): On Win32, set the gtk-fallback-icon-theme to
	"gnome".

2006-02-07  Andre Klapper  <a9016009@gmx.de>

	* e-shell-window-commands.c: changing year from 2005 to 2006.

2006-02-05  Andre Klapper  <a9016009@gmx.de>

	* shell.error.xml: fixing one typo. fixes #304996 partially.

2006-02-05  Shreyas Srinivasan  <sshreyas@novell.com>

	* e-shell-nm-glib.c: init the nm-dbus connection once. 
	
2006-01-29  Kjartan Maraas  <kmaraas@gnome.org>

	* e-corba-config-page.c: (e_corba_config_page_class_init):
	* e-shell-folder-title-bar.c: (e_shell_folder_title_bar_construct):
	* e-shell-window.c: (init_view):
	* e-shell.c: (detect_version), (e_shell_construct), (e_shell_new),
	(e_shell_attempt_upgrade), (e_shell_create_window),
	(e_shell_save_settings):
	* main.c: (idle_cb):
	Remove unused code and fix format specifiers in some cases.

2006-01-26  Rajeev ramanathan <rajeevramanathan_2004@yahoo.co.in>

	** Fixes Bug #257654
	
	* e-shell-window.c:
	* e-shell-window-commands.c: Added code to show/hide sidebar.

2006-01-29  Harish Krishnaswamy  <kharish@novell.com>

	* main.c: (show_development_warning):
	 s/don't/do not/ string change. Fixes #325276.

2006-01-27  Andre Klapper <a9016009@gmx.de>
	* apps_evolution_shell.schemas.in.in: changed tow strings to add
	missing punctuation and clarification for translators.
	Fixes bug 306117.

2006-01-26  Andre Klapper <a9016009@gmx.de>
	* e-shell-window-commands.c: adding missing comma in the
	contributors list.

2006-01-23  Joe Marcus Clarke <marcus@freebsd.org>

	* e-user-creatable-items-handler.c: adding a check to make sure 
	the shortcut key is not the NUL byte. Fixes bug 327468.
