@@ -157,6 +157,7 @@ static const char *authors[] = {
 	"Alex Jiang",
 	"Alfred Peng",
 	"Ali Abdin",
+	"Ali Akcaagac",
 	"Almer S. Tigelaar",
 	"Amish",	
 	"Anders Carlsson",
@@ -177,10 +178,12 @@ static const char *authors[] = {
 	"Arunprakash",
 	"Bastien Nocera",
 	"Benjamin Kahn",
+	"Benjamin Berg",
 	"Bertrand Guiheneuf",
 	"Bill Zhu",
 	"Bjorn Torkelsson",
 	"Bob Doan",
+	"Boby Wang",
 	"Bolian Yin",
 	"Brian Mury",
 	"Bruce Tao",
@@ -207,6 +210,7 @@ static const char *authors[] = {
 	"Christopher J. Lahey",
 	"Christopher R. Gabriel",
 	"Chris Toshok",
+	"Claudio Saavedra",
 	"Clifford R. Conover",
 	"Cody Russell",
 	"Craig Small",
@@ -238,6 +242,7 @@ static const char *authors[] = {
 	"Edd Dumbill",
 	"Edgar Luna Díaz",
 	"Edward Rudd",
+	"Elijah Newren",
 	"Elliot Lee",
 	"Elliot Turner",
 	"Eneko Lacunza",
@@ -247,6 +252,7 @@ static const char *authors[] = {
 	"Eric Zhao",
 	"Eskil Heyn Olsen",
 	"Ettore Perazzoli",
+	"Evan Yan",
 	"Fatih Demir",
 	"Fazlu & Hannah",
 	"Federico Mena Quintero",
@@ -254,6 +260,7 @@ static const char *authors[] = {
 	"Francisco Javier F. Serrador",
 	"Frank Belew",
 	"Frederic Crozat",
+	"Funda Wang",
 	"Gareth Owen",
 	"Gary Ekker",
 	"Gediminas Paulauskas",
@@ -280,6 +287,8 @@ static const char *authors[] = {
 	"H\xC3\xA9" "ctor Garc\xC3\xAD" "a \xC3\x81" "lvarez",
 	"Iain Holmes",
 	"Ian Campbell",
+	"Ilkka Tuohela",
+	"Irene Huang",
 	"Ismael Olea",
 	"Israel Escalante",
 	"Iv\xC3\xA1" "n Frade",
@@ -298,6 +307,7 @@ static const char *authors[] = {
 	"Jayaradha",
 	"Jean-Noel Guiheneuf",
 	"Jeff Garzik",
+	"Jeff Cai",
 	"Jeffrey Stedfast",
 	"Jens Seidel",
 	"Jeremy Katz",
@@ -309,8 +319,10 @@ static const char *authors[] = {
 	"Ji Lee",
 	"Joan Sanfeliu",
 	"Jody Goldberg",
+	"Joe Marcus Clarke",
 	"Joe Shaw",
 	"John Gotts",
+	"Johnny Jacob",
 	"Jonas Borgstr",
 	"Jonathan Blandford",
 	"Jonathan Dieter",
@@ -334,6 +346,7 @@ static const char *authors[] = {
 	"Kjartan Maraas",
 	"Krishnan R",
 	"Krisztian Pifko",
+	"Kyle Ambroff",
 	"Larry Ewing",
 	"Laurent Dhima",
 	"Lauris Kaplinski",
@@ -342,6 +355,7 @@ static const char *authors[] = {
 	"Lorenzo Gil Sanchez",
 	"Luis Villa",
 	"Lutz M",
+	"M Victor Aloysius J",
 	"Maciej Stachowiak",
 	"Malcolm Tredinnick",
 	"Marco Pesenti Gritti",
@@ -361,6 +375,7 @@ static const char *authors[] = {
 	"Matias Mutchinick",
 	"Matt Bissiri",
 	"Matt Brown",
+	"Matthew Hall",
 	"Matthew Loper",
 	"Matthew Wilson",
 	"Matt Martin",
@@ -384,13 +399,16 @@ static const char *authors[] = {
 	"Miles Lane",
 	"Mohammad DAMT",
 	"Morten Welinder",
+	"Mubeen Jukaku",
 	"Naba Kumar",
 	"Nagappan Alagappan",
+	"Nancy Cai",
 	"Nat Friedman",
 	"Nicel KM",
 	"Nicholas J Kreucher",
 	"Nike Gerdts",
 	"Nuno Ferreira",
+	"Oswald Rodrigues",
 	"Owen Taylor",
 	"Pablo Gonzalo del Campo",
 	"Pablo Saratxaga",
@@ -400,6 +418,7 @@ static const char *authors[] = {
 	"Parthasarathi Susarla",
 	"Pavel Cisler",
 	"Pavel Roskin",
+	"Pavithran",
 	"Peteris Krisjanis",
 	"Peter Pouliot",
 	"Peter Teichman",
@@ -416,7 +435,9 @@ static const char *authors[] = {
 	"P.S.Chakravarthi",
 	"Radek Doul\xC3\xADk",
 	"Raja R Harinath",
+	"Rajeev Ramanathan",
 	"Ramiro Estrugo",
+	"Ranjan Somani",
 	"Ray Strode",
 	"Rhys Jones",
 	"Richard Boulton",
@@ -427,14 +448,17 @@ static const char *authors[] = {
 	"Robin Slomkowski",
 	"Rodney Dawes",
 	"Rodrigo Moya",
+	"Rohini S",
 	"Ronald Kuetemeier",
 	"Roozbeh Pournader",
 	"Ross Burton",
 	"Runa Bhattacharjee",
 	"Russell Steinthal",
 	"Ryan P. Skadberg",
+	"S Antony Vincent Pandian",
 	"Sam Creasey",
 	"Sam\xC3\xBA" "el J\xC3\xB3" "n Gunnarsson",
+	"Sam Yang",
 	"Sankar P",
 	"Sanlig Badral",
 	"Sanshao Jiang",
@@ -448,8 +472,10 @@ static const char *authors[] = {
 	"Seth Alves",
 	"Seth Nickell",
 	"Shakti Sen",
+	"Shi Pu",
 	"Shilpa C",
 	"Shreyas Srinivasan",
+	"Simon Zheng",
 	"Simos Xenitellis",
 	"Sivaiah Nallagatla",
 	"S N Tejasvi",
@@ -476,6 +502,7 @@ static const char *authors[] = {
 	"Timothy Lee",
 	"Timur Bakeyev",
 	"Tim Wo",
+	"Tino Meinen",
 	"Tomas Ogren",
 	"Tomasz K\xC3\x85" "oczko",
 	"Tomislav Vujec",
@@ -492,11 +519,13 @@ static const char *authors[] = {
 	"Valek Filippov",
 	"Vardhman Jain",
 	"Veerapuram Varadhan",
+	"Vincent van Adrighem",
 	"Viren",
 	"Vivek Jain",
 	"Vladimir Vukicevic",
 	"V Ravi Kumar Raju",
 	"Wang Jian",
+	"Wang Xin",
 	"Wayne Davis",
 	"William Jon McCann",
 	"Xan Lopez",
@@ -507,12 +536,14 @@ static const char *authors[] = {
 	"Yuri Syrota",
 	"Zach Frey",
 	"Zbigniew Chyla",
+	"Žygimantas Beručka",
 	NULL
 };
 static const char *documentors[] = { 
 	"Aaron Weber",
 	"David Trowbridge",
 	"Jessica Prabhakar",
+	"Binika Preet",
 	NULL
 };
 
